--- a/index.html
+++ b/index.html
@@ -7,25 +7,37 @@
     <link rel="stylesheet" href="./styles/styles.css" >
 </head>
 <body>
+    <div class="header global-color-content" id="header">
+        <p class="global-text" id="logo" aria-readonly="">&lt;r&gt;</p>
+            <ul class="global-text"id="links">
+                <a href="https://github.com/kevinzekee/Random-Tools" target="_blank" rel="noopener noreferrer"><li>GitHub</li></a>
+                <li>Sources</li>
+                <button id="link-button"><img src="./images/sun.svg"></button>
+            </ul>
+    </div>
     <div class="DocumentWrap">
-        <div class="header">
-            <h1>Random Tools</h1>
-        </div>
         <div class="columned">
             <div class="document">
-                <div class="left-bar">
+                <div class="left-bar global-color-content">
                     <div class="left-content">
-                        <button id="btn">Randomize Brainrot</button>
+                        <div class="range">
+                            <p class="global-text">Emoji Frequency:<input type="range" min="1" max="4" step="1" id="range"></p>
+                        </div>
+                        <p class="left-text global-text">Emoji List:</p>
+                        <textarea id="emoji" class="left-text-box global-color-textbox" autocomplete="off" placeholder="Paste your emojis/text here!"></textarea>
+                        <button id="btn">Make it Brainrotted 😂 </button>
                     </div>
                 </div>
-                <div class="right-bar">
+                <div class="right-bar global-color-content">
+                    <p class="global-text">Your Text:</p>
                     <div class="input">
-                        <textarea id="text" type="text" class="text-box" placeholder="Paste your funny text here..." autocomplete="off"></textarea>
+                        <textarea id="text" type="text" class="text-box global-color-textbox" autocomplete="off" placeholder="Paste your funny text here..."></textarea>
                     </div>
                 </div>
             </div>
-            <div class="under-bar">
-                <textarea readonly class="text-box" placeholder="Your funny text will show up here..." id="result" autocomplete="off"></textarea>
+            <div class="under-bar global-color-content">
+                <p class="global-text">Results:</p>
+                <textarea readonly class="text-box global-color-textbox" placeholder="Your funny text will show up here..." id="result"  autocomplete="off"></textarea>
             </div>
         </div>
         <div class="image-edit">
@@ -33,5 +45,7 @@
         </div>
     </div>
     <script src="scripts/script.js"></script>
+    <script src="scripts/animation.js"></script>
+    <script src="scripts/mode.js"></script>
 </body>
 </html>
